--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {}
     },
-    "platforms": []
+    "platforms": [
+      "ios"
+    ]
   }
 }
