--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@angular/platform-browser": "5.2.10",
         "@angular/platform-browser-dynamic": "5.2.10",
         "@ionic-native/core": "4.7.0",
+        "@ionic-native/onesignal": "^4.7.0",
         "@ionic-native/splash-screen": "4.7.0",
         "@ionic-native/status-bar": "4.7.0",
         "@ionic/storage": "2.1.3",
@@ -34,6 +35,7 @@
         "cordova-plugin-whitelist": "^1.3.3",
         "ionic-angular": "3.9.2",
         "ionicons": "3.0.0",
+        "onesignal-cordova-plugin": "^2.4.1",
         "phoenix-channels": "^1.0.0",
         "rxjs": "5.5.10",
         "sw-toolbox": "3.6.0",
@@ -50,7 +52,8 @@
             "cordova-plugin-device": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-ionic-webview": {},
-            "cordova-plugin-ionic-keyboard": {}
+            "cordova-plugin-ionic-keyboard": {},
+            "onesignal-cordova-plugin": {}
         },
         "platforms": [
             "android",
